--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="index.css">
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js" defer></script>
   </head>
   <body>
     <div class="container">
-      <h1>ZoroBeats</h1>
+      <h1>ZoroBeats</h1>wa
       <h2>Real-Time Music Sync Room</h2>
 
       <section class="room-join-section">
@@ -44,7 +44,6 @@
         </section>
       </div>
     </div>
-
     <!-- YouTube IFrame API script -->
     <script src="https://www.youtube.com/iframe_api"></script>
 
@@ -76,6 +75,7 @@
       searchYoutubeBtn.addEventListener("click", searchYoutube);
       playYoutubeBtn.addEventListener("click", playYoutube);
       pauseYoutubeBtn.addEventListener("click", pauseYoutube);
+
 
       function joinRoom() {
         const enteredRoom = roomIdInput.value.trim();
